--- a/odin-links-and-images/recipes/apple_pie.html
+++ b/odin-links-and-images/recipes/apple_pie.html
@@ -5,7 +5,6 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/apple_pie.html">Recipe Title</a>
+        <h1>Apple Pie Recipe</h1>
     </body>
 </html>
