Updated Recipe Links
Updated links so that they are opened in seperate tabs

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/apple_pie.html">Grandma Ople's Apple Pie Recipe</a>
+        <a href="https://www.allrecipes.com/recipe/12682/apple-pie-by-grandma-ople/" target="_blank" rel="noreferrer noopener" >Grandma Ople's Apple Pie Recipe</a>
         <br/>
         <img src="https://www.allrecipes.com/thmb/3wEMwICeHh18Ppxq4XY1OoEqY1k=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ar-12682-apple-pie-by-grandma-ople-ddmfs-beauty-1-069-326ca495fffb42588293e3d9c9391f00.jpg" alt="Apple Pie by Grandma Ople" height="310" width="400" />
         <h2>Description</h2>
@@ -45,9 +45,9 @@
         </ol>
         <h3>Below, you can find more Apple Pie recipes</h3>
         <ul>
-            <li> <a href="https://www.allrecipes.com/recipe/12681/apple-pie-filling/">Apple Pie Filling</a></li>
-            <li> <a href="https://www.allrecipes.com/recipe/12324/apple-pie-i/">Easy Apple Pie</a></li>
-            <li> <a href="https://www.allrecipes.com/recipe/220997/chef-johns-caramel-apple-pie/">Chef John's Caramel Apple Pie</a></li>
+            <li> <a href="https://www.allrecipes.com/recipe/12681/apple-pie-filling/" target="_blank" rel="noopener noreferrer">Apple Pie Filling</a></li>
+            <li> <a href="https://www.allrecipes.com/recipe/12324/apple-pie-i/" target="_blank" rel="noopener noreferrer">Easy Apple Pie</a></li>
+            <li> <a href="https://www.allrecipes.com/recipe/220997/chef-johns-caramel-apple-pie/" target="_blank" rel="noopener noreferrer">Chef John's Caramel Apple Pie</a></li>
         </ul>
         <br />
         
